<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="220dp"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    tools:showIn=".ui.MainActivity">

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
         android:orientation="vertical">


        <cn.program.astudio.as.widget.KXScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/navmenu_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:showDividers="middle"
                    android:dividerPadding="@dimen/space_4"
                    android:divider="@drawable/divider">

                    <RadioButton
                        android:id="@+id/navmenu_rbtn_problem"
                        style="@style/NavMenuRadioStyle"
                        android:text="@string/drawer_menu_problem_text"/>

                    <RadioButton
                        android:id="@+id/navmenu_rbtn_content"
                        style="@style/NavMenuRadioStyle"
                        android:text="@string/drawer_menu_contest_text"/>

                    <RadioButton
                        android:id="@+id/navmenu_rbtn_proxy"
                        style="@style/NavMenuRadioStyle"
                        android:text="@string/drawer_menu_proxy_text"/>
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/black"/>

                <TextView
                    android:id="@+id/navmenu_btn_pasteboard"
                    style="@style/NavMenuButtonStyle"
                    android:text="@string/drawer_menu_pasteboard_text"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"/>

                <TextView
                    android:id="@+id/navmenu_btn_starcontent"
                    style="@style/NavMenuButtonStyle"
                    android:text="@string/drawer_menu_starcontent_text"/>
                </LinearLayout>
        </cn.program.astudio.as.widget.KXScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/navmenu_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/color_white2gray_press"
            android:drawableLeft="@drawable/drawer_menu_setting_press"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/drawer_menu_setting_text"/>

        <TextView
            android:id="@+id/navmenu_exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/color_white2gray_press"
            android:drawableLeft="@drawable/drawer_menu_exit_press"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/drawer_menu_exit_text"/>

    </LinearLayout>
</LinearLayout>